Fix un-aligned texts below icons

--- a/assets/css/client-helpers.css
+++ b/assets/css/client-helpers.css
@@ -14,6 +14,8 @@ ngb-modal-window .video-sharing {
   text-decoration: none !important;
   outline: none !important;
   color: #000;
+  flex-direction: column;
+  align-items: center;
 }
 
 ngb-modal-window .video-sharing:last-child {
